Add more countries

--- a/docs/lessons/home-and-country.mdx
+++ b/docs/lessons/home-and-country.mdx
@@ -77,12 +77,14 @@ are some example transliterations:
 
 An endonym is how a city, region, or state refers to themselves where an exonym
 is how a city, region, or state is referred to by outsiders. Hîsyêô suggests
-that you always use endonyms and that's what will be provided in the
-documentation. If you are struggling to be understood, you can try to offer the
-exonym to your interlocutor to see if that helps. One of the central tenets of
-the language is a respect and admiration for the myriad of languages in the
-world and the phonology of this language tries to be a bit wider to help
-illustrate this respect. Names are another place where respect should be given.
+that you always try to use endonyms and that's what will be provided in the
+documentation. If you are struggling to be understood because perhaps there are
+multiple regional endonyms or you're speaking to a non-local person, you can try
+to offer a different endonym, or as a last resolt an exonym, to your
+interlocutor to see if that helps. One of the central tenets of the language is
+a respect and admiration for the myriad of languages in the world and the
+phonology of this language tries to be a bit wider to help illustrate this
+respect. Names are another place where respect should be given.
 
 :::
 
@@ -93,12 +95,134 @@ we can zoom out and talk about the region that it is located in.
 
 <HisyeoTabs>
     <p>noyo niwos sinsî cûtî hoî fenûo fîtîkôs sôltûstik yê kûôcyo Kenudu.&emsp;<em>I live in a small town in the northwest region of Canada.</em></p>
-    <p>nîmû monodo sinsî Tuhêmu ko. ni (li gô) hoî fenûo sêl Seklumentôû sôltûstik.&emsp;<em>Have you not heard of Tehama? It's in the North Sacramento Valley.</em></p>
+    <p>nîmû monodo sî sinsî Tuhêmu ko. ni (li gô) hoî fenûo sêl Seklumentôû sôltûstik.&emsp;<em>Have you not heard of Tehama? It's in the North Sacramento Valley.</em></p>
     <p>môi nûs bi konbokbo yoûtî niwos ûnhilun yê fenûo sinsî Lozil Bouk yê sinsî Xikogô.&emsp;<em>We mostly all live around the Rogers Park neighborhood of Chicago.</em></p>
     <p>nîmû sûko xe tûu nô sêl lûcik hoî fenûo tôxûtsi êto Olbî ko.&emsp;<em>Do you like to go skiing in the Alps?</em></p>
 </HisyeoTabs>
 
 ## Country
+
+Modern society has been designed by various forces to have us believing in
+[imagined communities](https://en.wikipedia.org/wiki/Imagined_community) that we
+call countries, states, or nations. There are various mores and folkways that we
+follow to help rebuff their importance in our lives. In some ways, this is
+similar to the approach that the Hîsyêô community follows to help build a stable
+home within the zeitgeist.
+
+:::warning Sanctioned Violence
+
+One of the values of the Hîsyêô community is respect for all humans. Some nation
+states allow for violence in certain circumstances and this is considered
+regressive behavior to the Hîsyêô community.
+
+:::
+
+If you need to discuss a nation with someone, here are some of the endonyms for
+the top 100 nations by population size:
+
+<HisyeoTabs>
+    <p>kûôcyo Buholut/Bolut (fenûo Osîyo sôltûstik)&emsp;<em>India (Southern Asia)</em></p>
+    <p>kûôcyo Zûngûô (fenûo Osîyo kilukû)&emsp;<em>China (Eastern Asia)</em></p>
+    <p>kûôcyo Yûnoîtit Sitêtsu (fenûo Umeliku sôltûstik)&emsp;<em>United States (Northern America)</em></p>
+    <p>kûôcyo Indônesyu (fenûo Osîyo kilukû sôltûstik)&emsp;<em>Indonesia (South-eastern Asia)</em></p>
+    <p>kûôcyo Bokiston (fenûo Osîyo sôltûstik)&emsp;<em>Pakistan (Southern Asia)</em></p>
+    <p>kûôcyo Nizêliye (fenûo Ofulîko fîtîkôs)&emsp;<em>Nigeria (Western Africa)</em></p>
+    <p>kûôcyo Bulosîû (fenûo Umeliku zonûbî)&emsp;<em>Brazil (South America)</em></p>
+    <p>kûôcyo Bonlodês (fenûo Osîyo sôltûstik)&emsp;<em>Bangladesh (Southern Asia)</em></p>
+    <p>kûôcyo Lusîyu (fenûo Êûlôbo kilukû)&emsp;<em>Russia (Eastern Europe)</em></p>
+    <p>kûôcyo Mêhîkô (fenûo Umeliku mutyu)&emsp;<em>Mexico (Central America)</em></p>
+    <p>kûôcyo Îtîyôbîo (fenûo Ofulîko kilukû)&emsp;<em>Ethiopia (Eastern Africa)</em></p>
+    <p>kûôcyo Nîhôn (fenûo Osîyo sôltûstik)&emsp;<em>Japan (Eastern Asia)</em></p>
+    <p>kûôcyo Bilibînus (fenûo Osîyo kilukû sôltûstik) &emsp;<em>Philippines (South-eastern Asia)</em></p>
+    <p>kûôcyo Moshul (fenûo Ofulîko sôltûstik)&emsp;<em>Egypt (Northern Africa)</em></p>
+    <p>kûôcyo Kôngô-Kinxoso (fenûo Ofulîko mutyu)&emsp;<em>DR Congo (Middle Africa)</em></p>
+    <p>kûôcyo Fîut Non (fenûo Osîyo kilukû sôltûstik) &emsp;<em>Vietnam (South-eastern Asia)</em></p>
+    <p>kûôcyo Êlon (fenûo Osîyo sôltûstik)&emsp;<em>Iran (Southern Asia)</em></p>
+    <p>kûôcyo Tîlkîye (fenûo Osîyo fîtîkôs)&emsp;<em>Turkey (Western Asia)</em></p>
+    <p>kûôcyo Dôiclon/Dôiclontu (fenûo Êûlôbo fîtîkôs)&emsp;<em>Germany (Western Europe)</em></p>
+    <p>kûôcyo Toî (fenûo Osîyo kilukû sôltûstik) &emsp;<em>Thailand (South-eastern Asia)</em></p>
+    <p>kûôcyo Yûnoitit Kindun (fenûo Êûlôbo sôltûstik)&emsp;<em>United Kingdom (Northern Europe)</em></p>
+    <p>kûôcyo Tonzonîyo (fenûo Ofulîko kilukû)&emsp;<em>Tanzania (Eastern Africa)</em></p>
+    <p>kûôcyo Fulonsu (fenûo Êûlôbo fîtîkôs)&emsp;<em>France (Western Europe)</em></p>
+    <p>kûôcyo Ofulîko Zonûbî (fenûo Ofulîko zonûbî)&emsp;<em>South Africa (Southern Africa)</em></p>
+    <p>kûôcyo Îtolyo (fenûo Êûlôbo zonûbî)&emsp;<em>Italy (Southern Europe)</em></p>
+    <p>kûôcyo Kenyo (fenûo Ofulîko kilukû)&emsp;<em>Kenya (Eastern Africa)</em></p>
+    <p>kûôcyo Mîonmo (fenûo Osîyo kilukû sôltûstik)&emsp;<em>Myanmar (South-eastern Asia)</em></p>
+    <p>kûôcyo Kôlômbîo (fenûo Umeliku zonûbî)&emsp;<em>Colombia (South America)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo kilukû)&emsp;<em>South Korea (Eastern Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko sôltûstik)&emsp;<em>Sudan (Northern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Uganda (Eastern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo zonûbî)&emsp;<em>Spain (Southern Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko sôltûstik)&emsp;<em>Algeria (Northern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Argentina (South America)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Iraq (Western Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo sôltûstik)&emsp;<em>Afghanistan (Southern Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Yemen (Western Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Umeliku sôltûstik)&emsp;<em>Canada (Northern America)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Poland (Eastern Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Ukraine (Eastern Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko sôltûstik)&emsp;<em>Morocco (Northern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko mutyu)&emsp;<em>Angola (Middle Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo mutyu)&emsp;<em>Uzbekistan (Central Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo kilukû sôltûstik)&emsp;<em>Malaysia (South-eastern Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Peru (South America)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Ghana (Western Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Mozambique (Eastern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Saudi Arabia (Western Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Madagascar (Eastern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Ivory Coast (Western Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo sôltûstik)&emsp;<em>Nepal (Southern Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko mutyu)&emsp;<em>Cameroon (Middle Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Venezuela (South America)</em></p>
+    <p>kûôcyo ??? (fenûo Uûxîonîu)&emsp;<em>Australia (Oceania)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo sôltûstik)&emsp;<em>North Korea (Eastern Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Niger (Western Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Mali (Western Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Syria (Western Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo sôltûstik)&emsp;<em>Taiwan (Eastern Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Burkina Faso (Western Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo sôltûstik)&emsp;<em>Sri Lanka (Southern Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Malawi (Eastern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Zambia (Eastern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo mutyu)&emsp;<em>Kazakhstan (Central Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Chile (South America)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko mutyu)&emsp;<em>Chad (Middle Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Romania (Eastern Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Somalia (Eastern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Umeliku mutyu)&emsp;<em>Guatemala (Central America)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Senegal (Western Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo fîtîkôs)&emsp;<em>Netherlands (Western Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Ecuador (South America)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo kilukû sôltûstik)&emsp;<em>Cambodia (South-eastern Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Zimbabwe (Eastern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Guinea (Western Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Benin (Western Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Rwanda (Eastern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Burundi (Eastern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Bolivia (South America)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko sôltûstik)&emsp;<em>Tunisia (Northern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo fîtîkôs)&emsp;<em>Belgium (Western Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Kogoyîbêjen)&emsp;<em>Haiti (Caribbean)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>South Sudan (Eastern Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Jordan (Western Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Kogoyîbêjen)&emsp;<em>Dominican Republic (Caribbean)</em></p>
+    <p>kûôcyo ??? (fenûo Kogoyîbêjen)&emsp;<em>Cuba (Caribbean)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Czechia (Eastern Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Umeliku mutyu)&emsp;<em>Honduras (Central America)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>United Arab Emirates (Western Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo sôltûstik)&emsp;<em>Sweden (Northern Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo zonûbî)&emsp;<em>Portugal (Southern Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo mutyu)&emsp;<em>Tajikistan (Central Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Uûxîonîu)&emsp;<em>Papua New Guinea (Oceania)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Azerbaijan (Western Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo zonûbî)&emsp;<em>Greece (Southern Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Hungary (Eastern Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Togo (Western Africa)</em></p>
+    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Israel (Western Asia)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo fîtîkôs)&emsp;<em>Austria (Western Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Belarus (Eastern Europe)</em></p>
+    <p>kûôcyo ??? (fenûo Êûlôbo fîtîkôs)&emsp;<em>Switzerland (Western Europe)</em></p>
+</HisyeoTabs>
 
 ### Citizens
 
