add more country names

--- a/docs/lessons/home-and-country.mdx
+++ b/docs/lessons/home-and-country.mdx
@@ -149,41 +149,40 @@ the top 100 nations by population size:
     <p>kûôcyo Kenyo (fenûo Ofulîko kilukû)&emsp;<em>Kenya (Eastern Africa)</em></p>
     <p>kûôcyo Mîonmo (fenûo Osîyo kilukû sôltûstik)&emsp;<em>Myanmar (South-eastern Asia)</em></p>
     <p>kûôcyo Kôlômbîo (fenûo Umeliku zonûbî)&emsp;<em>Colombia (South America)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo kilukû)&emsp;<em>South Korea (Eastern Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko sôltûstik)&emsp;<em>Sudan (Northern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Uganda (Eastern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo zonûbî)&emsp;<em>Spain (Southern Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko sôltûstik)&emsp;<em>Algeria (Northern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Argentina (South America)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Iraq (Western Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo sôltûstik)&emsp;<em>Afghanistan (Southern Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Yemen (Western Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Umeliku sôltûstik)&emsp;<em>Canada (Northern America)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Poland (Eastern Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Ukraine (Eastern Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko sôltûstik)&emsp;<em>Morocco (Northern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko mutyu)&emsp;<em>Angola (Middle Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo mutyu)&emsp;<em>Uzbekistan (Central Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo kilukû sôltûstik)&emsp;<em>Malaysia (South-eastern Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Peru (South America)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Ghana (Western Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Mozambique (Eastern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Saudi Arabia (Western Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Madagascar (Eastern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Ivory Coast (Western Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo sôltûstik)&emsp;<em>Nepal (Southern Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko mutyu)&emsp;<em>Cameroon (Middle Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Venezuela (South America)</em></p>
-    <p>kûôcyo ??? (fenûo Uûxîonîu)&emsp;<em>Australia (Oceania)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo sôltûstik)&emsp;<em>North Korea (Eastern Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Niger (Western Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Mali (Western Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Syria (Western Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo sôltûstik)&emsp;<em>Taiwan (Eastern Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Burkina Faso (Western Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo sôltûstik)&emsp;<em>Sri Lanka (Southern Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Malawi (Eastern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Zambia (Eastern Africa)</em></p>
+    <p>kûôcyo Hongûk (fenûo Osîyo kilukû)&emsp;<em>South Korea (Eastern Asia)</em></p>
+    <p>kûôcyo Osûdon (fenûo Ofulîko sôltûstik)&emsp;<em>Sudan (Northern Africa)</em></p>
+    <p>kûôcyo Ûgondo (fenûo Ofulîko kilukû)&emsp;<em>Uganda (Eastern Africa)</em></p>
+    <p>kûôcyo Êsponyo (fenûo Êûlôbo zonûbî)&emsp;<em>Spain (Southern Europe)</em></p>
+    <p>kûôcyo Ilzosoyîl (fenûo Ofulîko sôltûstik)&emsp;<em>Algeria (Northern Africa)</em></p>
+    <p>kûôcyo Olhêntîno (fenûo Umeliku zonûbî)&emsp;<em>Argentina (South America)</em></p>
+    <p>kûôcyo Ofugoniston (fenûo Osîyo sôltûstik)&emsp;<em>Afghanistan (Southern Asia)</em></p>
+    <p>kûôcyo Olyomon (fenûo Osîyo fîtîkôs)&emsp;<em>Yemen (Western Asia)</em></p>
+    <p>kûôcyo Kenudu (fenûo Umeliku sôltûstik)&emsp;<em>Canada (Northern America)</em></p>
+    <p>kûôcyo Bôlsuko (fenûo Êûlôbo kilukû)&emsp;<em>Poland (Eastern Europe)</em></p>
+    <p>kûôcyo Ûkluyînu (fenûo Êûlôbo kilukû)&emsp;<em>Ukraine (Eastern Europe)</em></p>
+    <p>kûôcyo Olmoklîbu (fenûo Ofulîko sôltûstik)&emsp;<em>Morocco (Northern Africa)</em></p>
+    <p>kûôcyo Ûngôlu (fenûo Ofulîko mutyu)&emsp;<em>Angola (Middle Africa)</em></p>
+    <p>kûôcyo Ôsbekiston (fenûo Osîyo mutyu)&emsp;<em>Uzbekistan (Central Asia)</em></p>
+    <p>kûôcyo Mulêxu (fenûo Osîyo kilukû sôltûstik)&emsp;<em>Malaysia (South-eastern Asia)</em></p>
+    <p>kûôcyo Bêlû (fenûo Umeliku zonûbî)&emsp;<em>Peru (South America)</em></p>
+    <p>kûôcyo Gonu (fenûo Ofulîko fîtîkôs)&emsp;<em>Ghana (Western Africa)</em></p>
+    <p>kûôcyo Môsunbîkî (fenûo Ofulîko kilukû)&emsp;<em>Mozambique (Eastern Africa)</em></p>
+    <p>kûôcyo Osoûdîyo (fenûo Osîyo fîtîkôs)&emsp;<em>Saudi Arabia (Western Asia)</em></p>
+    <p>kûôcyo Modogosikyolo (fenûo Ofulîko kilukû)&emsp;<em>Madagascar (Eastern Africa)</em></p>
+    <p>kûôcyo Kôtdifuwo (fenûo Ofulîko fîtîkôs)&emsp;<em>Ivory Coast (Western Africa)</em></p>
+    <p>kûôcyo Nêbol (fenûo Osîyo sôltûstik)&emsp;<em>Nepal (Southern Asia)</em></p>
+    <p>kûôcyo Komuhûn (fenûo Ofulîko mutyu)&emsp;<em>Cameroon (Middle Africa)</em></p>
+    <p>kûôcyo Bênêfûêlo (fenûo Umeliku zonûbî)&emsp;<em>Venezuela (South America)</em></p>
+    <p>kûôcyo Ustulêilyu (fenûo Uûxîonîu)&emsp;<em>Australia (Oceania)</em></p>
+    <p>kûôcyo Bûkhon (fenûo Osîyo sôltûstik)&emsp;<em>North Korea (Eastern Asia)</em></p>
+    <p>kûôcyo Nîxêu (fenûo Ofulîko fîtîkôs)&emsp;<em>Niger (Western Africa)</em></p>
+    <p>kûôcyo Molî (fenûo Ofulîko fîtîkôs)&emsp;<em>Mali (Western Africa)</em></p>
+    <p>kûôcyo Sûlîyo (fenûo Osîyo fîtîkôs)&emsp;<em>Syria (Western Asia)</em></p>
+    <p>kûôcyo Toîwon (fenûo Osîyo sôltûstik)&emsp;<em>Taiwan (Eastern Asia)</em></p>
+    <p>kûôcyo Bûlkino Fosô (fenûo Ofulîko fîtîkôs)&emsp;<em>Burkina Faso (Western Africa)</em></p>
+    <p>kûôcyo Xulî Lunko (fenûo Osîyo sôltûstik)&emsp;<em>Sri Lanka (Southern Asia)</em></p>
+    <p>kûôcyo Mulofûî (fenûo Ofulîko kilukû)&emsp;<em>Malawi (Eastern Africa)</em></p>
+    <p>kûôcyo Sonbîo (fenûo Ofulîko kilukû)&emsp;<em>Zambia (Eastern Africa)</em></p>
     <p>kûôcyo ??? (fenûo Osîyo mutyu)&emsp;<em>Kazakhstan (Central Asia)</em></p>
     <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Chile (South America)</em></p>
     <p>kûôcyo ??? (fenûo Ofulîko mutyu)&emsp;<em>Chad (Middle Africa)</em></p>
