Finished first pass at remaining countries

--- a/docs/lessons/home-and-country.mdx
+++ b/docs/lessons/home-and-country.mdx
@@ -183,44 +183,44 @@ the top 100 nations by population size:
     <p>kûôcyo Xulî Lunko (fenûo Osîyo sôltûstik)&emsp;<em>Sri Lanka (Southern Asia)</em></p>
     <p>kûôcyo Mulofûî (fenûo Ofulîko kilukû)&emsp;<em>Malawi (Eastern Africa)</em></p>
     <p>kûôcyo Sonbîo (fenûo Ofulîko kilukû)&emsp;<em>Zambia (Eastern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo mutyu)&emsp;<em>Kazakhstan (Central Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Chile (South America)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko mutyu)&emsp;<em>Chad (Middle Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Romania (Eastern Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Somalia (Eastern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Umeliku mutyu)&emsp;<em>Guatemala (Central America)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Senegal (Western Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo fîtîkôs)&emsp;<em>Netherlands (Western Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Ecuador (South America)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo kilukû sôltûstik)&emsp;<em>Cambodia (South-eastern Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Zimbabwe (Eastern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Guinea (Western Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Benin (Western Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Rwanda (Eastern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>Burundi (Eastern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Umeliku zonûbî)&emsp;<em>Bolivia (South America)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko sôltûstik)&emsp;<em>Tunisia (Northern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo fîtîkôs)&emsp;<em>Belgium (Western Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Kogoyîbêjen)&emsp;<em>Haiti (Caribbean)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko kilukû)&emsp;<em>South Sudan (Eastern Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Jordan (Western Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Kogoyîbêjen)&emsp;<em>Dominican Republic (Caribbean)</em></p>
-    <p>kûôcyo ??? (fenûo Kogoyîbêjen)&emsp;<em>Cuba (Caribbean)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Czechia (Eastern Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Umeliku mutyu)&emsp;<em>Honduras (Central America)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>United Arab Emirates (Western Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo sôltûstik)&emsp;<em>Sweden (Northern Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo zonûbî)&emsp;<em>Portugal (Southern Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo mutyu)&emsp;<em>Tajikistan (Central Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Uûxîonîu)&emsp;<em>Papua New Guinea (Oceania)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Azerbaijan (Western Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo zonûbî)&emsp;<em>Greece (Southern Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Hungary (Eastern Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Ofulîko fîtîkôs)&emsp;<em>Togo (Western Africa)</em></p>
-    <p>kûôcyo ??? (fenûo Osîyo fîtîkôs)&emsp;<em>Israel (Western Asia)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo fîtîkôs)&emsp;<em>Austria (Western Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo kilukû)&emsp;<em>Belarus (Eastern Europe)</em></p>
-    <p>kûôcyo ??? (fenûo Êûlôbo fîtîkôs)&emsp;<em>Switzerland (Western Europe)</em></p>
+    <p>kûôcyo Kosoksuton (fenûo Osîyo mutyu)&emsp;<em>Kazakhstan (Central Asia)</em></p>
+    <p>kûôcyo Cîlê (fenûo Umeliku zonûbî)&emsp;<em>Chile (South America)</em></p>
+    <p>kûôcyo Côt (fenûo Ofulîko mutyu)&emsp;<em>Chad (Middle Africa)</em></p>
+    <p>kûôcyo Lômînîo (fenûo Êûlôbo kilukû)&emsp;<em>Romania (Eastern Europe)</em></p>
+    <p>kûôcyo Sômolîyo (fenûo Ofulîko kilukû)&emsp;<em>Somalia (Eastern Africa)</em></p>
+    <p>kûôcyo Gûotêmolo (fenûo Umeliku mutyu)&emsp;<em>Guatemala (Central America)</em></p>
+    <p>kûôcyo Senegool (fenûo Ofulîko fîtîkôs)&emsp;<em>Senegal (Western Africa)</em></p>
+    <p>kûôcyo Nîdulun/Nîdulundu (fenûo Êûlôbo fîtîkôs)&emsp;<em>Netherlands (Western Europe)</em></p>
+    <p>kûôcyo Îkwodûl (fenûo Umeliku zonûbî)&emsp;<em>Ecuador (South America)</em></p>
+    <p>kûôcyo Konbûtîu (fenûo Osîyo kilukû sôltûstik)&emsp;<em>Cambodia (South-eastern Asia)</em></p>
+    <p>kûôcyo Sinbobûêi (fenûo Ofulîko kilukû)&emsp;<em>Zimbabwe (Eastern Africa)</em></p>
+    <p>kûôcyo Ginî (fenûo Ofulîko fîtîkôs)&emsp;<em>Guinea (Western Africa)</em></p>
+    <p>kûôcyo Bênen (fenûo Ofulîko fîtîkôs)&emsp;<em>Benin (Western Africa)</em></p>
+    <p>kûôcyo Ûlgûondo (fenûo Ofulîko kilukû)&emsp;<em>Rwanda (Eastern Africa)</em></p>
+    <p>kûôcyo Bûlûndi (fenûo Ofulîko kilukû)&emsp;<em>Burundi (Eastern Africa)</em></p>
+    <p>kûôcyo Bûliwîo (fenûo Umeliku zonûbî)&emsp;<em>Bolivia (South America)</em></p>
+    <p>kûôcyo Tûnîs (fenûo Ofulîko sôltûstik)&emsp;<em>Tunisia (Northern Africa)</em></p>
+    <p>kûôcyo Belsîk (fenûo Êûlôbo fîtîkôs)&emsp;<em>Belgium (Western Europe)</em></p>
+    <p>kûôcyo Oyîtî (fenûo Kogoyîbêjen)&emsp;<em>Haiti (Caribbean)</em></p>
+    <p>kûôcyo Osûdon Sôltûstik (fenûo Ofulîko kilukû)&emsp;<em>South Sudan (Eastern Africa)</em></p>
+    <p>kûôcyo Olûldûn (fenûo Osîyo fîtîkôs)&emsp;<em>Jordan (Western Asia)</em></p>
+    <p>kûôcyo Dômînîkonu (fenûo Kogoyîbêjen)&emsp;<em>Dominican Republic (Caribbean)</em></p>
+    <p>kûôcyo Kûfo (fenûo Kogoyîbêjen)&emsp;<em>Cuba (Caribbean)</em></p>
+    <p>kûôcyo Cêskô (fenûo Êûlôbo kilukû)&emsp;<em>Czechia (Eastern Europe)</em></p>
+    <p>kûôcyo Ôndûlos (fenûo Umeliku mutyu)&emsp;<em>Honduras (Central America)</em></p>
+    <p>kûôcyo Olîmolot (fenûo Osîyo fîtîkôs)&emsp;<em>United Arab Emirates (Western Asia)</em></p>
+    <p>kûôcyo Sufelye (fenûo Êûlôbo sôltûstik)&emsp;<em>Sweden (Northern Europe)</em></p>
+    <p>kûôcyo Bûltûgol (fenûo Êûlôbo zonûbî)&emsp;<em>Portugal (Southern Europe)</em></p>
+    <p>kûôcyo Tozîkîstôn (fenûo Osîyo mutyu)&emsp;<em>Tajikistan (Central Asia)</em></p>
+    <p>kûôcyo Bobûo Nîûgînî (fenûo Uûxîonîu)&emsp;<em>Papua New Guinea (Oceania)</em></p>
+    <p>kûôcyo Oselboîzon (fenûo Osîyo fîtîkôs)&emsp;<em>Azerbaijan (Western Asia)</em></p>
+    <p>kûôcyo Êlînîkî (fenûo Êûlôbo zonûbî)&emsp;<em>Greece (Southern Europe)</em></p>
+    <p>kûôcyo Mozolôlsok (fenûo Êûlôbo kilukû)&emsp;<em>Hungary (Eastern Europe)</em></p>
+    <p>kûôcyo Tôgô (fenûo Ofulîko fîtîkôs)&emsp;<em>Togo (Western Africa)</em></p>
+    <p>kûôcyo Yîsloêl (fenûo Osîyo fîtîkôs)&emsp;<em>Israel (Western Asia)</em></p>
+    <p>kûôcyo Ôsteleic (fenûo Êûlôbo fîtîkôs)&emsp;<em>Austria (Western Europe)</em></p>
+    <p>kûôcyo Bîêlolûc (fenûo Êûlôbo kilukû)&emsp;<em>Belarus (Eastern Europe)</em></p>
+    <p>kûôcyo Xufoic (fenûo Êûlôbo fîtîkôs)&emsp;<em>Switzerland (Western Europe)</em></p>
 </HisyeoTabs>
 
 ### Citizens
