--- a/docs/lessons/home-and-country.mdx
+++ b/docs/lessons/home-and-country.mdx
@@ -225,6 +225,18 @@ the top 100 nations by population size:
 
 ### Citizens
 
+The term "citizen" is a way for state actors to differentiate between people
+inside and outside of their imagined communities. You may be asked or need to
+ask someone of their citizenship.
+
+<HisyeoTabs>
+    <p>nîmû li kukwon yê kûôcyo Yûnoitit Sitêtsu ko.&emsp;<em>Are you a US citizen?</em></p>
+    <p>nîo yûnyoû kon kukwon nîo yê kûôcyo Êlînîkî ko.&emsp;<em>Do they have their Greek citizenship?</em></p>
+    <p>noyo yûnyoû dûî kon kukwon yê kûôcyo Kenudu ûn kûôcyo Ustulêilyu.&emsp;<em>I have dual Canadian and Australian citizenship.</em></p>
+    <p>nûs lufono golo fos sôlû oxon xe li kukwon yê kûôcyo Ûkluyînu. &emsp;<em>We are applying to be Ukrainian citizens.</em></p>
+</HisyeoTabs>
+
+
 ### Languages
 
 <HisyeoTooltip />
