Added rest of the language transliterations

--- a/docs/lessons/home-and-country.mdx
+++ b/docs/lessons/home-and-country.mdx
@@ -239,4 +239,184 @@ ask someone of their citizenship.
 
 ### Languages
 
+Of course, there are many languages in the world and 177 of them are apart of
+the Hîsyêô lexicon in some way. Here's some endonyms for those languages.
+
+<HisyeoTabs>
+    <p>hîskûnco Obcuwo&emsp;<em>Abkhazian (Abkhazo-Adyghean)</em></p>
+    <p>hîskûnco Obûwî&emsp;<em>Abui (Trans-New Guinea)</em></p>
+    <p>hîskûnco Odugo&emsp;<em>Adyghe (Abkhazo-Adyghean)</em></p>
+    <p>hîskûnco Xikcîbu&emsp;<em>Albanian (Albanian)</em></p>
+    <p>hîskûnco Omolînyo&emsp;<em>Amharic (Afro-Asiatic)</em></p>
+    <p>hîskûnco Olobî&emsp;<em>Arabic (Afro-Asiatic)</em></p>
+    <p>hîskûnco Hoîgogon&emsp;<em>Armenian (Armenian)</em></p>
+    <p>hîskûnco Ôhômîo&emsp;<em>Assamese (Indo-Iranian)</em></p>
+    <p>hîskûnco Ostûlyonû&emsp;<em>Asturian (Romance)</em></p>
+    <p>hîskûnco Utokubu&emsp;<em>Atakapa (Misc)</em></p>
+    <p>hîskûnco Otôn&emsp;<em>Atong (Sino-Tibetan)</em></p>
+    <p>hîskûnco Ufol&emsp;<em>Avar (Nakh-Daghestani)</em></p>
+    <p>hîskûnco Oîmolo&emsp;<em>Aymara (Quechumaran)</em></p>
+    <p>hîskûnco Oselî&emsp;<em>Azerbaijani (Turkic)</em></p>
+    <p>hîskûnco Bolî&emsp;<em>Barí (Chibchan)</em></p>
+    <p>hîskûnco Bockûltu&emsp;<em>Bashkir (Turkic)</em></p>
+    <p>hîskûnco Êûskolo&emsp;<em>Basque (Basque)</em></p>
+    <p>hîskûnco Boihic&emsp;<em>Bavarian (Germanic)</em></p>
+    <p>hîskûnco Bîelolûskoyo&emsp;<em>Belarusian (Balto-Slavic)</em></p>
+    <p>hîskûnco Bonlo&emsp;<em>Bengali (Indo-Iranian)</em></p>
+    <p>hîskûnco Bîkôl&emsp;<em>Bikol (Austronesian)</em></p>
+    <p>hîskûnco Boso Ûgi&emsp;<em>Buginese (Austronesian)</em></p>
+    <p>hîskûnco Bulgulsikî&emsp;<em>Bulgarian (Balto-Slavic)</em></p>
+    <p>hîskûnco Bûn&emsp;<em>Bum (Niger-Congo)</em></p>
+    <p>hîskûnco Mîumo Bofo&emsp;<em>Burmese (Sino-Tibetan)</em></p>
+    <p>hîskûnco Kûôntûnwo&emsp;<em>Cantonese (Sino-Tibetan)</em></p>
+    <p>hîskûnco Kutulo&emsp;<em>Catalan (Romance)</em></p>
+    <p>hîskûnco Binîsuyo&emsp;<em>Cebuano (Austronesian)</em></p>
+    <p>hîskûnco Nôkcî Mûot&emsp;<em>Chechen (Nakh-Daghestani)</em></p>
+    <p>hîskûnco Nîenzu&emsp;<em>Chichewa (Niger-Congo)</em></p>
+    <p>hîskûnco Cîkoxonônbo&emsp;<em>Chickasaw (Muskogean)</em></p>
+    <p>hîskûnco Cuwoclo&emsp;<em>Chuvash (Turkic)</em></p>
+    <p>hîskûnco Lumunkêmu&emsp;<em>Coptic (Afro-Asiatic)</em></p>
+    <p>hîskûnco Ceskîno&emsp;<em>Czech (Balto-Slavic)</em></p>
+    <p>hîskûnco Densik&emsp;<em>Danish (Germanic)</em></p>
+    <p>hîskûnco Dîwêhî&emsp;<em>Dhivehi (Indo-Iranian)</em></p>
+    <p>hîskûnco Dôlûô&emsp;<em>Dholuo (Nilo-Saharan)</em></p>
+    <p>hîskûnco Dûngun&emsp;<em>Dungan (Sino-Tibetan)</em></p>
+    <p>hîskûnco Nêdulonsu&emsp;<em>Dutch (Germanic)</em></p>
+    <p>hîskûnco Êdê&emsp;<em>Ede (Niger-Congo)</em></p>
+    <p>hîskûnco Ingulic&emsp;<em>English (Germanic)</em></p>
+    <p>hîskûnco Esbulontôû&emsp;<em>Esperanto (Misc)</em></p>
+    <p>hîskûnco Êifenkî&emsp;<em>Evenki (Tungusic)</em></p>
+    <p>hîskûnco Efekbe&emsp;<em>Ewe (Niger-Congo)</em></p>
+    <p>hîskûnco Sûômî&emsp;<em>Finnish (Uralic)</em></p>
+    <p>hîskûnco Fulonse&emsp;<em>French (Romance)</em></p>
+    <p>hîskûnco Fûlu&emsp;<em>Fula (Niger-Congo)</em></p>
+    <p>hîskûnco Golêgû&emsp;<em>Galician (Romance)</em></p>
+    <p>hîskûnco Koltûlî Êno&emsp;<em>Georgian (Kartvelian)</em></p>
+    <p>hîskûnco Dôic&emsp;<em>German (Germanic)</em></p>
+    <p>hîskûnco Kîlîbotî&emsp;<em>Gilbertese (Austronesian)</em></p>
+    <p>hîskûnco Êlînîko&emsp;<em>Greek (Hellenic)</em></p>
+    <p>hîskûnco Kololîsût&emsp;<em>Greenlandic (Eskaleut)</em></p>
+    <p>hîskûnco Owo&emsp;<em>Guajá (Tupian)</em></p>
+    <p>hîskûnco Owonyêê&emsp;<em>Guaraní (Tupian)</em></p>
+    <p>hîskûnco Hozôn&emsp;<em>Hajong (Indo-Iranian)</em></p>
+    <p>hîskûnco Hokofo&emsp;<em>Hakka (Sino-Tibetan)</em></p>
+    <p>hîskûnco Hoûsu&emsp;<em>Hausa (Afro-Asiatic)</em></p>
+    <p>hîskûnco Ôlelô Hufoî Î&emsp;<em>Hawaiian (Austronesian)</em></p>
+    <p>hîskûnco Îfhît&emsp;<em>Hebrew (Afro-Asiatic)</em></p>
+    <p>hîskûnco Hindî&emsp;<em>Hindi (Indo-Iranian)</em></p>
+    <p>hîskûnco Môn&emsp;<em>Hmong (Hmong-Mien)</em></p>
+    <p>hîskûnco Mozol Nîelfu&emsp;<em>Hungarian (Uralic)</em></p>
+    <p>hîskûnco Istulensuko&emsp;<em>Icelandic (Germanic)</em></p>
+    <p>hîskûnco Îlôûkonôû&emsp;<em>Ilocano (Austronesian)</em></p>
+    <p>hîskûnco Îndônêsîyo&emsp;<em>Indonesian (Austronesian)</em></p>
+    <p>hîskûnco Îxôlon Kêlî&emsp;<em>Ingrian (Uralic)</em></p>
+    <p>hîskûnco Gulgoî Môt&emsp;<em>Ingush (Nakh-Daghestani)</em></p>
+    <p>hîskûnco Gêlzu&emsp;<em>Irish (Celtic)</em></p>
+    <p>hîskûnco Îtolyonô&emsp;<em>Italian (Romance)</em></p>
+    <p>hîskûnco Nîhôngô&emsp;<em>Japanese (Japonic)</em></p>
+    <p>hîskûnco Boso Zowo&emsp;<em>Javanese (Austronesian)</em></p>
+    <p>hîskûnco Kîcê&emsp;<em>K'iche' (Mayan)</em></p>
+    <p>hîskûnco Fukbeîlis&emsp;<em>Kabyle (Afro-Asiatic)</em></p>
+    <p>hîskûnco Kenbu&emsp;<em>Kamba (Niger-Congo)</em></p>
+    <p>hîskûnco Kunudo&emsp;<em>Kannada (Dravidian)</em></p>
+    <p>hîskûnco Koxebiscî Yonsek&emsp;<em>Kashubian (Balto-Slavic)</em></p>
+    <p>hîskûnco Kosokxo&emsp;<em>Kazakh (Turkic)</em></p>
+    <p>hîskûnco Koktênkosî&emsp;<em>Khasi (Austro-Asiatic)</em></p>
+    <p>hîskûnco Bîuso Kumoê&emsp;<em>Khmer (Austro-Asiatic)</em></p>
+    <p>hîskûnco Kôîloô&emsp;<em>Khoirao (Sino-Tibetan)</em></p>
+    <p>hîskûnco Gêkôyô&emsp;<em>Kikuyu (Niger-Congo)</em></p>
+    <p>hîskûnco Kîtûbo&emsp;<em>Kituba (Niger-Congo)</em></p>
+    <p>hîskûnco Kêlôn&emsp;<em>Klon (Trans-New Guinea)</em></p>
+    <p>hîskûnco Kômî Kîfu&emsp;<em>Komi-Zyrian (Uralic)</em></p>
+    <p>hîskûnco Hongûgu&emsp;<em>Korean (Koreic)</em></p>
+    <p>hîskûnco Kûlhûsco&emsp;<em>Kyrgyz (Turkic)</em></p>
+    <p>hîskûnco Boso Loû&emsp;<em>Lao (Kra-Dai)</em></p>
+    <p>hîskûnco Lotînû&emsp;<em>Latin (Romance)</em></p>
+    <p>hîskûnco Lotfîexû Folûôdo&emsp;<em>Latvian (Balto-Slavic)</em></p>
+    <p>hîskûnco Losûlî&emsp;<em>Laz (Kartvelian)</em></p>
+    <p>hîskûnco Kontoîlû&emsp;<em>Lü (Kra-Dai)</em></p>
+    <p>hîskûnco Lûô&emsp;<em>Luo (Nilo-Saharan)</em></p>
+    <p>hîskûnco Lutsubûuyuc&emsp;<em>Luxembourgish (Germanic)</em></p>
+    <p>hîskûnco Ol Moo&emsp;<em>Maasai (Nilo-Saharan)</em></p>
+    <p>hîskûnco Mokedônsukî Yosîk&emsp;<em>Macedonian (Balto-Slavic)</em></p>
+    <p>hîskûnco Moyon&emsp;<em>Majang (Nilo-Saharan)</em></p>
+    <p>hîskûnco Muloyû&emsp;<em>Malay (Austronesian)</em></p>
+    <p>hîskûnco Muluyolum&emsp;<em>Malayalam (Dravidian)</em></p>
+    <p>hîskûnco Moltî&emsp;<em>Maltese (Afro-Asiatic)</em></p>
+    <p>hîskûnco Momu&emsp;<em>Mam (Mayan)</em></p>
+    <p>hîskûnco Gûonhûo&emsp;<em>Mandarin (Sino-Tibetan)</em></p>
+    <p>hîskûnco Monsoko&emsp;<em>Mansaka (Austronesian)</em></p>
+    <p>hîskûnco Gilik&emsp;<em>Manx (Celtic)</em></p>
+    <p>hîskûnco Mooôlî&emsp;<em>Māori (Austronesian)</em></p>
+    <p>hîskûnco Mubûcî&emsp;<em>Mapudungun (Araucanian)</em></p>
+    <p>hîskûnco Mulotî&emsp;<em>Marathi (Indo-Iranian)</em></p>
+    <p>hîskûnco Mînyû&emsp;<em>Min (Sino-Tibetan)</em></p>
+    <p>hîskûnco Mîctek&emsp;<em>Mixtec (Oto-Manguean)</em></p>
+    <p>hîskûnco Môngus Hîs&emsp;<em>Mongolian (Mongolic)</em></p>
+    <p>hîskûnco Kîmûonî&emsp;<em>Mwani (Niger-Congo)</em></p>
+    <p>hîskûnco Nowotul&emsp;<em>Nahuatl (Uto-Aztecan)</em></p>
+    <p>hîskûnco Sûlit&emsp;<em>Neo-Aramaic (Afro-Asiatic)</em></p>
+    <p>hîskûnco Nêbolî&emsp;<em>Nepali (Indo-Iranian)</em></p>
+    <p>hîskûnco Nôxuk&emsp;<em>Norwegian (Germanic)</em></p>
+    <p>hîskûnco Ûksîto&emsp;<em>Occitan (Romance)</em></p>
+    <p>hîskûnco Ôdîo&emsp;<em>Odia (Indo-Iranian)</em></p>
+    <p>hîskûnco Ôzibwu&emsp;<em>Ojibwe (Algic)</em></p>
+    <p>hîskûnco Olumôû&emsp;<em>Oromo (Afro-Asiatic)</em></p>
+    <p>hîskûnco Hunyonyûn&emsp;<em>Otomian (Oto-Manguean)</em></p>
+    <p>hîskûnco Puctô&emsp;<em>Pashto (Indo-Iranian)</em></p>
+    <p>hîskûnco Bowoîo&emsp;<em>Pawaia (Trans-New Guinea)</em></p>
+    <p>hîskûnco Folsî&emsp;<em>Persian (Indo-Iranian)</em></p>
+    <p>hîskûnco Bôlsikî&emsp;<em>Polish (Balto-Slavic)</em></p>
+    <p>hîskûnco Bûltûgêc&emsp;<em>Portuguese (Romance)</em></p>
+    <p>hîskûnco Bunzobî&emsp;<em>Punjabi (Indo-Iranian)</em></p>
+    <p>hîskûnco Kêkcî&emsp;<em>Q'eqchi' (Mayan)</em></p>
+    <p>hîskûnco Lûno Simi&emsp;<em>Quechua (Quechumaran)</em></p>
+    <p>hîskûnco Lômînu&emsp;<em>Romanian (Romance)</em></p>
+    <p>hîskûnco Lûskiî Yisîk&emsp;<em>Russian (Balto-Slavic)</em></p>
+    <p>hîskûnco Sensiklit&emsp;<em>Sanskrit (Indo-Iranian)</em></p>
+    <p>hîskûnco Sontolî&emsp;<em>Santali (Austro-Asiatic)</em></p>
+    <p>hîskûnco Selbôûklôûêixun&emsp;<em>Serbo-Croatian (Balto-Slavic)</em></p>
+    <p>hîskûnco Sesûtû&emsp;<em>Sesotho (Niger-Congo)</em></p>
+    <p>hîskûnco Xôûnu&emsp;<em>Shona (Niger-Congo)</em></p>
+    <p>hîskûnco Sixilyonû&emsp;<em>Sicilian (Romance)</em></p>
+    <p>hîskûnco Sinhulu&emsp;<em>Sinhalese (Indo-Iranian)</em></p>
+    <p>hîskûnco Sulôfensikî Yosîk&emsp;<em>Slovak (Balto-Slavic)</em></p>
+    <p>hîskûnco Sônhoî&emsp;<em>Songhay (Nilo-Saharan)</em></p>
+    <p>hîskûnco Sôlo&emsp;<em>Sora (Austro-Asiatic)</em></p>
+    <p>hîskûnco Êsponyôl&emsp;<em>Spanish (Romance)</em></p>
+    <p>hîskûnco Kîswohîlî&emsp;<em>Swahili (Niger-Congo)</em></p>
+    <p>hîskûnco Sufensuko&emsp;<em>Swedish (Germanic)</em></p>
+    <p>hîskûnco Tugolôg&emsp;<em>Tagalog (Austronesian)</em></p>
+    <p>hîskûnco Tomîl&emsp;<em>Tamil (Dravidian)</em></p>
+    <p>hîskûnco Têlûgû&emsp;<em>Telugu (Dravidian)</em></p>
+    <p>hîskûnco Tulnotê&emsp;<em>Ternate (Trans-New Guinea)</em></p>
+    <p>hîskûnco Bosotoî&emsp;<em>Thai (Kra-Dai)</em></p>
+    <p>hîskûnco Bôke&emsp;<em>Tibetan (Sino-Tibetan)</em></p>
+    <p>hîskûnco Tîklînyo&emsp;<em>Tigrinya (Afro-Asiatic)</em></p>
+    <p>hîskûnco Tûlkuxê&emsp;<em>Turkish (Turkic)</em></p>
+    <p>hîskûnco Tûlkumôncô&emsp;<em>Turkmen (Turkic)</em></p>
+    <p>hîskûnco Botsîkôbu&emsp;<em>Tzotzil (Mayan)</em></p>
+    <p>hîskûnco Ûdîn Mûs&emsp;<em>Udi (Nakh-Daghestani)</em></p>
+    <p>hîskûnco Ûklujînsîku Môfu&emsp;<em>Ukrainian (Balto-Slavic)</em></p>
+    <p>hîskûnco Ûldû&emsp;<em>Urdu (Indo-Iranian)</em></p>
+    <p>hîskûnco Ûîhûltili&emsp;<em>Uyghur (Turkic)</em></p>
+    <p>hîskûnco Folênsîo&emsp;<em>Valencian (Romance)</em></p>
+    <p>hîskûnco Tîun Fîut&emsp;<em>Vietnamese (Austro-Asiatic)</em></p>
+    <p>hîskûnco Woloî&emsp;<em>Waray (Austronesian)</em></p>
+    <p>hîskûnco Kunloîk&emsp;<em>Welsh (Celtic)</em></p>
+    <p>hîskûnco Hûnû&emsp;<em>Wu (Sino-Tibetan)</em></p>
+    <p>hîskûnco Kôso&emsp;<em>Xhosa (Niger-Congo)</em></p>
+    <p>hîskûnco Yêgon&emsp;<em>Yegang (Nilo-Saharan)</em></p>
+    <p>hîskûnco Yidic&emsp;<em>Yiddish (Germanic)</em></p>
+    <p>hîskûnco Yôlûbo&emsp;<em>Yoruba (Niger-Congo)</em></p>
+    <p>hîskûnco Moyoton&emsp;<em>Yucatec (Mayan)</em></p>
+    <p>hîskûnco Sebutek&emsp;<em>Zapotec (Oto-Manguean)</em></p>
+    <p>hîskûnco Solmu Sonî&emsp;<em>Zarma (Nilo-Saharan)</em></p>
+    <p>hîskûnco Sîmokonî&emsp;<em>Zimakani (Trans-New Guinea)</em></p>
+    <p>hîskûnco Sôû&emsp;<em>Zou (Sino-Tibetan)</em></p>
+    <p>hîskûnco îsîsûlû&emsp;<em>Zulu (Niger-Congo)</em></p>
+</HisyeoTabs>
+
+*If any of these transliterations aren't accurate, please reach out in Discord or Github to request a fix.*
+
 <HisyeoTooltip />
