Fix one language

--- a/docs/lessons/home-and-country.mdx
+++ b/docs/lessons/home-and-country.mdx
@@ -272,7 +272,7 @@ the Hîsyêô lexicon in some way. Here's some endonyms for those languages.
     <p>hîskûnco Îtolyonô&emsp;<em>Italian (Romance)</em></p>
     <p>hîskûnco îsîsûlû&emsp;<em>Zulu (Niger-Congo)</em></p>
     <p>hîskûnco Îxôlon Kêlî&emsp;<em>Ingrian (Uralic)</em></p>
-    <p>hîskûnco Îfhît&emsp;<em>Hebrew (Afro-Asiatic)</em></p>
+    <p>hîskûnco Îfît&emsp;<em>Hebrew (Afro-Asiatic)</em></p>
     <p>hîskûnco Îndônêsîyo&emsp;<em>Indonesian (Austronesian)</em></p>
     <p>hîskûnco Îlôûkonôû&emsp;<em>Ilocano (Austronesian)</em></p>
     <p>hîskûnco Utokubu&emsp;<em>Atakapa (Misc)</em></p>
