Fix for nose word file and test sentence

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -154,7 +154,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>doî ôfo li otikon gosîl ze.&emsp;<em>This string is too short!</em></p>
 <p>oiyo. woyû ûslêk sî ônî doknû wîk noyo bi mônbili.&emsp;<em>Oh, dear! the wind has blown my hat away!</em></p>
 <p>oiyo. û fisun nêôs ulyô li kûyô lôîcôk.&emsp;<em>Alas! that news is sad indeed!</em></p>
-<p>oiyo. woyû cunyû ulyô li êo bukû ôlê nosîko noyo foxo.&emsp;<em>Whew! that cold wind freezes my nose!</em></p>
+<p>oiyo. woyû cunyû ulyô li êo bukû ôlê mêloc noyo foxo.&emsp;<em>Whew! that cold wind freezes my nose!</em></p>
 <p>nîmû li zôtêstô tût bi îbûdû ko.&emsp;<em>Are you warm enough now?</em></p>
 <p>nîo tenkîn sî gongoxî hoî otikon mûun.&emsp;<em>They heard the warning too late.</em></p>
 <p>nûs li umo môfî yûbik fenûo nûs.&emsp;<em>We are a brave people, and love our country.</em></p>
