--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -14,16 +14,21 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 ## kîso Woyû Sôltûstik Onô Ûn Bînton Lono Onô
 
 <HisyeoTabs>
-<p>niwos hoî kut wokût ôhêl û mênyûu yê hondon kon bôklôn xê
-   yûnyoû sî lozîdô ûn dûuncît xe gôcîdon sî xe bi gûexo obûlû
-   môî kûôcyo yê nucoto onô ûn cihôû xe li êo ôsôlê ôlê umo
-   onô, û nîo li êo kobût mûlû ôlê kûôcyo nîo tô môtô ûn
-   leknek kon wêtû kîldo ûn ônî oklumun nîo li êo botuk ôlê
-   gos hoî comen onô li êo kobût mûlû ôlê niwos yê umo onô tô
-   môtô bînê û tolên môtô ogolol woloko lûntî sûn tolên nomû
-   ûn kûôxi onô li sî henondê bi ûlgûkîn mûlû hoî nomû nêlô yê
-   kon okûlo môtô et onô. êto motûo bûzôk li sî cok ofek lôzîc
-   nungo nîo xe hoî obô nîo, hoî ...</p>
+    <p>niwos hoî kut wokût ôhêl û mênyûu yê hondon kon bôklôn xe yûnyoû sî
+    lozîdô ûn dûuncît xe gôcîdon sî xe bi gûexo obûlû môî kûôcyo yê nucoto onô
+    ûn cihôû xe li êo ôsôlê ôlê umo onô, û nîo li êo kobût mûlû ôlê kûôcyo nîo
+    tô môtô ûn leknek kon wêtû kîldo ûn ônî oklumun nîo li êo botuk ôlê gos hoî
+    comen onô li êo kobût mûlû ôlê niwos yê umo onô tô môtô bînê û tolên môtô
+    ogolol woloko lûntî sûn tolên nomû ûn kûôxi onô li sî henondê bi ûlgûkîn
+    mûlû hoî nomû nêlô yê kon okûlo môtô et onô. êto motûo wohî bûzôk li sî cok
+    ofek lôzîc nungo nîo xe hoî obô nîo, hoî sôbo mônbili yê bêlêtê yê kon wôlik
+    môcîbo et yê niwos yê nîo wohî; lêkin bi ûtok hoî ulyô û ônî oklumun wêtodû
+    nîo wohî ûn hoî fos nîo li sî gîk hoî nîo wohî, nîo wohî li zôhûn oxon kon
+    xowosê nîecni nîo; yûkwoî nîecni bi kônên kôî tûu sî yôk uyo yê lôc eswen en
+    ônî oklumun ôfo foxo. mênyûu yê hondon kon bôklôn et onô yûnyoû gonîso fos
+    môî ôfo li dûndon ûn û ni li tîton bunxin fos uyo kûu cînlî. ûlzo nîo dî sî
+    eswen hoî xokôn lono, û somo nîo li sî êo ôsôlê ôlê môî ûn û bogô sûko
+    wêîlun nîo.</p>
 </HisyeoTabs> 
 
 <HisyeoTooltip/>
